hphp/hack/test/typecheck/bogus_escape.php.exp
File "bogus_escape.php", line 4, characters 9-17:
invalid numeric escape (Parsing[1002])
