hphp/hack/test/typecheck/bogus_escape.php
<?hh

function foo(): void {
  $s = "\u{1000 k";
}
